# KNOW-NET-COMPET

./: .env  .gitignore  README.md  application-profile.yaml  constraints.cypher  debug_nan.py  docker-compose.yml  gen_neo4j_constraints.py  indexes.cypher  inspect_parquet.py  main.py  model.py  neodash.json  pyproject.toml  requirements.txt  schema.puml  schema.yaml  tests.ipynb
.agent/rules/: lib-management.md
data/: marketing_sample.json  tabula-occ_table.csv
data_sample/: anuario_occ_table.csv  people.json  social_careers.json  societies.json
elt_core/: base_source.py  db_connector.py  gold_source.py  graph_enrichment.py  graph_loader.py  neo4j_queries.py  transformations.py
inspo/: couch.py  ingest_to_couch.py
sources/: RI_parliament_source.py  anuario_occ_source.py  contracts_source.py  cpv_structure.py  cpv_structure_source.py  marketing_source.py  nif_scraper_source.py  orbis_dm.py  orbis_pt_companies_uci.py  orbis_sh.py  people_area_source.py  social_careers_source.py  societies_source.py  utils.py
sources/gold/: companies_gold.py  contracts_gold.py  entities_gold.py  municipal_entities_gold.py  orbis_gold.py  pep_gold.py  schemas.py
sources/graph_mappers/: contract_mapper.py  contracts_mapper.py  cpv_mapper.py  entities_mapper.py  entity_mapper.py  mapper_utils.py  municipal_entities_mapper.py  orbis_mapper.py  pep_mapper.py
sources/lookups/: countries_set.py  (+5 more)
tests/: conftest.py  test_base_source.py  test_contracts_source.py  test_db_connector.py  test_marketing_source.py  test_transformations.py  verify_env_logging.py  verify_logging.py
