[project]
name = "teste"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "pytest>=9.0.1",
    "requests>=2.32.5",
    "ujson>=5.11.0",
    "utils>=1.0.2",
]
